fixes position of change img button in edit user profile on mobile

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@media (max-width: 991px) {
+	.avatar-upload{
+		width: 210px;
+	}
+}
+
 .userthumb{
 	margin-top: 25px;
 	text-align: center;
